manifest files/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cloudresume-deployment
  namespace: cloud
spec:
  replicas: 2
  selector:
    matchLabels:
      project: Cloud-resume
  template:
    metadata:
      labels:
        project: Cloud-resume
    spec:
      containers:
      - name: resume-containers
        image: mrsinghdocker/myresumeimage:v1
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5 #After 5s of my container start,kubelet will send HTTP request to my pod
          periodSeconds: 10  #If failed, wait for 10s and send another request
          timeoutSeconds: 2
          failureThreshold: 3 #If it fails 3 times, pod is marked "not ready" and removed from service traffic.
          successThreshold: 1
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 2
          failureThreshold: 3 #If it fails 3 times consecutively, Kubernetes restarts the pod.
